# adaptive-learning

./: Dockerfile.infer  Dockerfile.train  docker-compose.infer.yml  docker-compose.train.yml  pyproject.toml
adaptive_engine/: config.py  data.py  generate_data.py  inference.py  kg.py  load_to_neo4j.py  logging_config.py  model.py  simulate.py  train.py
