[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-assessment-engine"
version = "0.1.0"
description = "Knowledge-graph integrated adaptive assessment engine for medical education"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "neo4j>=5.15.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
]

[project.scripts]
train-adaptive = "adaptive_engine.train:main"
inference-adaptive = "adaptive_engine.inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptive_engine*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/joaomvg/adaptive-assessment-engine"
Repository = "https://github.com/joaomvg/adaptive-assessment-engine"